CodeGenerator+Interop: Remove the camel casing when sanitizing names
In order to prepare for global variable support, we really need to ensure that we aren't camel casing method names and properties, etc. The reality is that we have a lame tradeoff to make: We either need to come up with a convention for identifying globals that will feel unnatural to those familiar with Javascript, or we need to just accept that Javascript has lots of instances where the casing of method names/property names/globals tend to collide.

--- a/Interop/test/BlazorSample/Views/IndexView.razor
+++ b/Interop/test/BlazorSample/Views/IndexView.razor
@@ -16,12 +16,12 @@
 
         var window = jsInProcessRuntime.GetWindow();
 
-        var body = window.Document.Body;
+        var body = window.document.body;
         var appendChildFunction = body.GetPropertyOfObject("appendChild") as JSFunction;
-        var newElement = window.Document.CreateElement(jsInProcessRuntime.CreateString("button"), null) as IHTMLButtonElement;
+        var newElement = window.document.createElement(jsInProcessRuntime.CreateString("button"), null) as IHTMLButtonElement;
         appendChildFunction?.Invoke(body, newElement);
-        newElement.Disabled = jsInProcessRuntime.CreateBoolean(true);
-        newElement.InnerText = jsInProcessRuntime.CreateString("My Button");
-        window.Document.Title = jsInProcessRuntime.CreateString("Well hello, there!");
+        newElement.disabled = jsInProcessRuntime.CreateBoolean(true);
+        newElement.innerText = jsInProcessRuntime.CreateString("My Button");
+        window.document.title = jsInProcessRuntime.CreateString("Well hello, there!");
     }
 }
