CodeGenerator+Interop: Support for globals exposed by globalThis (aka: `window.<Global>`)
(First of all, sorry for the large commit. I really tried to break it up but at this point I'm struggling to do it any cleaner.)
This commit adds support for globals, which have been sorely missing until this point. For example, you can now do:
```
window.Date.now();
```

or even:
```
window.console.clear();
```

--- a/Interop/test/BlazorSample/Views/IndexView.razor
+++ b/Interop/test/BlazorSample/Views/IndexView.razor
@@ -15,6 +15,12 @@
         }
 
         var window = jsInProcessRuntime.GetWindow();
+        window.console.clear();
+
+        var now = window.Date.now();
+        Console.WriteLine($"It is: {now.IsNaN()}");
+        Console.WriteLine($"It is: {now.IsInteger()}");
+        Console.WriteLine($"It is: {now.ConvertToDotNetLong()}");
 
         var body = window.document.body;
         var appendChildFunction = body.GetPropertyOfObject("appendChild") as JSFunction;
