CodeGenerator+Interop: Constructor functions for arrays and basic test case
This patch ensures that we can create arrays and do some basic operations on them (ie: check their length, push items, retrieve items by items).

We still do not generate methods that use arrays as parameter or return types, but this is going to be a step in the right direction.

--- a/Interop/test/BlazorSample/Views/IndexView.razor
+++ b/Interop/test/BlazorSample/Views/IndexView.razor
@@ -48,5 +48,16 @@
 
         Console.WriteLine(date.toLocaleString().ConvertToDotNetString());
         Console.WriteLine(date2.toLocaleString().ConvertToDotNetString());
+
+        var someArray = jsInProcessRuntime.CreateArray();
+        var initialLength = someArray.length;
+        Console.WriteLine($"Initial array length: {initialLength.ConvertToDotNetInt()}");
+        var pushResult1 = someArray.PushItem(date);
+        Console.WriteLine($"Push result 1: {pushResult1.ConvertToDotNetInt()}");
+        var pushResult2 = someArray.PushItem(date2);
+        Console.WriteLine($"Push result 2: {pushResult2.ConvertToDotNetInt()}");
+
+        var secondItem = someArray.GetItemAtIndex(jsInProcessRuntime.CreateNumberFromInt(1)) as IDate;
+        Console.WriteLine(secondItem.toLocaleDateString().ConvertToDotNetString());
     }
 }
