CodeGenerator+Interop: Supporting generics and eliminating runtime type checks
This commit is a big pivot that will help us support implementing generics properly. Prior to this, we were generating a bunch of code that was able to detect the prototype of objects that were returned from Javascript, then using that information to construct specific C# types.

This was nice because it ensured that if some foreign object was returned from Javascript that we had hints about, we could still construct the appropriate type for it. But it made it really hard to support the true duck-typing nature of Javascript.

This became really obvious when we started trying to use `getElementsByClassName`, which returns an `IHTMLCollectionOf<Node>`. What we started to notice was that the prototype of the returned object was being detected as `HtmlCollection` (which, for what it is worth, is correct!). The problem was that since we start with TypeScript definitions, we really only have enough information to infer implemented interfaces from the type definitions themselves. For example, `HTMLCollection` is not explicitly implementing `IHTMLCollectionOf<Node>` in the type definition. It does, however, _implicitly_ implement this interface. TypeScript is really clever and understands this at compile time.

I tried as best as I could to emulate this behavior through brute-force in the CodeGenerator. There are several reasons why it didn't work. The first reason is that it is extremely expensive to figure out what is being implicitly implemented by any given prototype. You essentially have to loop through all interfaces and check if you happen to implement the exact set of methods, properties, accessors, and constructors for the given interface. Next, you have to repeat the exact same process for all variants of those interfaces (any with generics, there are an infinite number of possible versions of this).

Even when I tried to hack together this brute-force mechanism, I was extremely uneasy 

--- a/Interop/test/BlazorSample/Views/IndexView.razor
+++ b/Interop/test/BlazorSample/Views/IndexView.razor
@@ -4,7 +4,7 @@
 @using RealGoodApps.BlazorJavascript.Interop.BuiltIns
 @inject IJSRuntime _jsRuntime
 
-<button id="printButton" @onclick="Print" style="color: red">Print</button>
+<button id="printButton" @onclick="Print" class="myClass" style="color: red">Print</button>
 
 @code {
     private void Print()
@@ -16,6 +16,12 @@
 
         var window = jsInProcessRuntime.GetWindow();
         window.console.clear();
+
+        var results = window.document.getElementsByClassName(jsInProcessRuntime.CreateString("myClass"));
+        Console.WriteLine($"Number of elements in collection: {results.length.ConvertToDotNetInt()}");
+
+        var firstElementInCollection = results.item(jsInProcessRuntime.CreateNumberFromInt(0));
+        Console.WriteLine($"Element tag name: {firstElementInCollection.tagName.ConvertToDotNetString()}");
 
         var printButtonElement = window.document.getElementById(jsInProcessRuntime.CreateString("printButton"));
         var computedStyle = window.getComputedStyle(printButtonElement, null);
@@ -29,9 +35,9 @@
         Console.WriteLine($"It is: {now.ConvertToDotNetLong()}");
 
         var body = window.document.body;
-        var appendChildFunction = body.GetPropertyOfObject("appendChild") as JSFunction;
-        var newElement = window.document.createElement(jsInProcessRuntime.CreateString("button"), null) as IHTMLButtonElement;
-        appendChildFunction?.Invoke(body, newElement);
+        var appendChildFunction = body.GetPropertyOfObject<JSFunction>("appendChild");
+        var newElement = window.document.createElement(jsInProcessRuntime.CreateString("button"), null).UnsafeCastTo<IHTMLButtonElement>();
+        appendChildFunction?.InvokeVoid(body, newElement);
         newElement.disabled = jsInProcessRuntime.CreateBoolean(true);
         newElement.innerText = jsInProcessRuntime.CreateString("My Button");
         window.document.title = jsInProcessRuntime.CreateString("Well hello, there!");
@@ -49,7 +55,7 @@
         Console.WriteLine(date.toLocaleString().ConvertToDotNetString());
         Console.WriteLine(date2.toLocaleString().ConvertToDotNetString());
 
-        var anchorElement = window.document.createElement(jsInProcessRuntime.CreateString("a"), null) as IHTMLAnchorElement;
+        var anchorElement = window.document.createElement(jsInProcessRuntime.CreateString("a"), null).UnsafeCastTo<IHTMLAnchorElement>();
         anchorElement.setAttribute(jsInProcessRuntime.CreateString("href"), jsInProcessRuntime.CreateString("https://google.com"));
         var attributes = anchorElement.getAttributeNames();
         var firstAttributeName = attributes.GetItemAtIndex(jsInProcessRuntime.CreateNumberFromInt(0));
@@ -66,7 +72,7 @@
             var pushResult2 = theArray.PushItem(date2);
             Console.WriteLine($"Push result 2: {pushResult2.ConvertToDotNetInt()}");
 
-            var secondItem = theArray.GetItemAtIndex(jsInProcessRuntime.CreateNumberFromInt(1)) as IDate;
+            var secondItem = theArray.GetItemAtIndex(jsInProcessRuntime.CreateNumberFromInt(1)).UnsafeCastTo<IDate>();
             Console.WriteLine(secondItem.toLocaleDateString().ConvertToDotNetString());
         }
 
