CodeGenerator+Interop+PagesGenerator+TSDumper: Support for generics and indexers
This commit is a big one, but I didn't see a good way to break it up into smaller chunks at this point. There are several things that have been addressed:

- Rendering and processing have been decoupled. This means that the `CodeGenerator` class now only handles outputting text, while the `ParsedInfoProcessor` does the heavy lifting. This makes it a little bit easier to poke around in the code, but it also allows us to separate the concerns a little better.

- All types are rendered, including unions and intersections. Types that were previously consider too complex are now typically rendered as "IJSObject".

- Overload support has been refined to attempt to reconcile situations where string literals (and similar types) were represented as overloads in TypeScript. We also represent them as overloads in generated code, but the difference being that we try to find the common type for each parameter, falling back to IJSObject when we are unable to determine a good fit.

- The entire surface area of DOM _should_ now be covered. There might be bugs and strange issues, but overall the methods should be callable.

- The concept of `Prototype` and `Global` has been combined into a single concept called `Class`. Ultimately, these were the same thing to begin with and I was honestly confusing myself a lot when it came to trying to justify why I was calling anything with a constructor a `Prototype`.

- You can now cast anything to any other type with UnsafeCastTo (soon I will add the ability to construct based on an interface name, which should help with some interesting method types that take plain old configuration objects that are disguised as interfaces in TypeScript). I'm also still not sold on the name of this method, but I think for now it makes sense because it assumes you know what the underlying Javascript object reference is actually implementing.

--- a/Interop/test/BlazorSample/Views/IndexView.razor
+++ b/Interop/test/BlazorSample/Views/IndexView.razor
@@ -16,6 +16,22 @@
 
         var window = jsInProcessRuntime.GetWindow();
         window.console.clear();
+        var values = jsInProcessRuntime.CreateArray<IJSObject>();
+        values.PushItem(jsInProcessRuntime.CreateString("Hello Friends :)"));
+        values.PushItem(jsInProcessRuntime.CreateString("Goodbye Friends :("));
+        var valuesAsNormalArray = values.UnsafeCastTo<IArray<JSString>>();
+        window.console.log(values);
+
+        var zerothItem = valuesAsNormalArray[jsInProcessRuntime.CreateNumberFromInt(0)];
+        var onethItem = valuesAsNormalArray[jsInProcessRuntime.CreateNumberFromInt(1)];
+
+        Console.WriteLine($"arr[0] = {zerothItem.ConvertToDotNetString()}");
+        Console.WriteLine($"arr[1] = {onethItem.ConvertToDotNetString()}");
+
+        valuesAsNormalArray[jsInProcessRuntime.CreateNumberFromInt(1)] = jsInProcessRuntime.CreateString("New value");
+        var newOnethItem = valuesAsNormalArray[jsInProcessRuntime.CreateNumberFromInt(1)];
+
+        Console.WriteLine($"arr[1] new = {newOnethItem.ConvertToDotNetString()}");
 
         var results = window.document.getElementsByClassName(jsInProcessRuntime.CreateString("myClass"));
         Console.WriteLine($"Number of elements in collection: {results.length.ConvertToDotNetInt()}");
@@ -75,6 +91,5 @@
             var secondItem = theArray.GetItemAtIndex(jsInProcessRuntime.CreateNumberFromInt(1)).UnsafeCastTo<IDate>();
             Console.WriteLine(secondItem.toLocaleDateString().ConvertToDotNetString());
         }
-
     }
 }
